# ecsim

./: LICENSE.txt  README.rst  pyproject.toml
docs/source/: conf.py  history.rst  index.rst
docs/source/_build/html/: .buildinfo  api.html  explanation.html  genindex.html  history.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorial.html
docs/source/_build/html/.doctrees/: api.doctree  environment.pickle  explanation.doctree  history.doctree  index.doctree  reference.doctree  tutorial.doctree
docs/source/_build/html/_sources/: api.rst.txt  explanation.rst.txt  history.rst.txt  index.rst.txt  tutorial.rst.txt
src/ecsim/: __init__.py  __main__.py  apportionment.py  cli.py  loaders.py  outcomes.py
src/ecsim/_data/: Census.csv  Election2004.csv  Election2008.csv  Election2012.csv  Election2016.csv  Election2020.csv
src/ecsim/scrapers/: __init__.py  base.py  census.py  election2004.py  election2008.py  election2012.py  election2016.py  election2020.py
tests/: test_ecsim.py
