[tool.poetry]
name = "ecsim"
version = "0.5.0"
description = ""
authors = ["fillthesavage <43685932+fillthesavage@users.noreply.github.com>"]
include = ["*.csv"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.3"
lxml = "^4.6.3"
click = "^8.0.3"
numpy = "^1.21.3"
rich = "^10.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.28.0"
Sphinx = "^4.2.0"

[tool.poetry.scripts]
ecsim = "ecsim.cli:main"
scrape = "ecsim._scrapers.cli:scrape_data"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
